@@ -18,6 +18,7 @@ import org.elasticsearch.action.search.SearchType;
 import org.elasticsearch.common.document.DocumentField;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.IndexSettings;
+import org.elasticsearch.index.fielddata.ScriptDocValues;
 import org.elasticsearch.index.query.MatchAllQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.index.seqno.SequenceNumbers;
@@ -32,9 +33,8 @@ import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.search.aggregations.Aggregator.SubAggCollectionMode;
 import org.elasticsearch.search.aggregations.BucketOrder;
 import org.elasticsearch.search.aggregations.InternalAggregation;
-import org.elasticsearch.search.aggregations.bucket.global.Global;
+import org.elasticsearch.search.aggregations.bucket.SingleBucketAggregation;
 import org.elasticsearch.search.aggregations.bucket.histogram.Histogram;
-import org.elasticsearch.search.aggregations.bucket.nested.Nested;
 import org.elasticsearch.search.aggregations.bucket.terms.Terms;
 import org.elasticsearch.search.aggregations.bucket.terms.TermsAggregatorFactory.ExecutionMode;
 import org.elasticsearch.search.fetch.FetchSubPhase;
@@ -64,6 +64,7 @@ import static org.elasticsearch.common.xcontent.support.XContentMapValues.extrac
 import static org.elasticsearch.index.query.QueryBuilders.matchAllQuery;
 import static org.elasticsearch.index.query.QueryBuilders.matchQuery;
 import static org.elasticsearch.index.query.QueryBuilders.nestedQuery;
+import static org.elasticsearch.script.MockScriptPlugin.NAME;
 import static org.elasticsearch.search.aggregations.AggregationBuilders.global;
 import static org.elasticsearch.search.aggregations.AggregationBuilders.histogram;
 import static org.elasticsearch.search.aggregations.AggregationBuilders.max;
@@ -102,7 +103,12 @@ public class TopHitsIT extends ESIntegTestCase {
     public static class CustomScriptPlugin extends MockScriptPlugin {
         @Override
         protected Map<String, Function<Map<String, Object>, Object>> pluginScripts() {
-            return Collections.singletonMap("5", script -> "5");
+            return Map.of("5", script -> "5", "doc['sort'].value", CustomScriptPlugin::sortDoubleScript);
+        }
+
+        private static Double sortDoubleScript(Map<String, Object> vars) {
+            Map<?, ?> doc = (Map) vars.get("doc");
+            return ((Number) ((ScriptDocValues<?>) doc.get("sort")).get(0)).doubleValue();
         }
 
         @Override
@@ -119,10 +125,10 @@ public class TopHitsIT extends ESIntegTestCase {
 
     @Override
     public void setupSuiteScopeCluster() throws Exception {
-        assertAcked(prepareCreate("idx").setMapping(TERMS_AGGS_FIELD, "type=keyword", "text", "type=text,store=true"));
-        assertAcked(prepareCreate("field-collapsing").setMapping("group", "type=keyword"));
-        createIndex("empty");
         assertAcked(
+            prepareCreate("idx").setMapping(TERMS_AGGS_FIELD, "type=keyword", "text", "type=text,store=true"),
+            prepareCreate("field-collapsing").setMapping("group", "type=keyword"),
+            prepareCreate("empty"),
             prepareCreate("articles").setMapping(
                 jsonBuilder().startObject()
                     .startObject("_doc")
@@ -328,7 +334,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(10L));
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(3));
                     higestSortValue += 10;
                     assertThat((Long) hits.getAt(0).getSortValues()[0], equalTo(higestSortValue));
@@ -348,7 +354,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 .setQuery(matchQuery("text", "x y z"))
                 .addAggregation(terms("terms").executionHint(randomExecutionHint()).field("group").subAggregation(topHits("hits"))),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(8L));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(8L));
                 assertThat(response.getHits().getHits().length, equalTo(0));
                 assertThat(response.getHits().getMaxScore(), equalTo(Float.NaN));
                 Terms terms = response.getAggregations().get("terms");
@@ -381,7 +387,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 .setQuery(matchQuery("text", "x y z"))
                 .addAggregation(terms("terms").executionHint(randomExecutionHint()).field("group")),
             response -> {
-                assertThat(response.getHits().getTotalHits().value, equalTo(8L));
+                assertThat(response.getHits().getTotalHits().value(), equalTo(8L));
                 assertThat(response.getHits().getHits().length, equalTo(0));
                 assertThat(response.getHits().getMaxScore(), equalTo(Float.NaN));
                 Terms terms = response.getAggregations().get("terms");
@@ -413,7 +419,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(10L));
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(3));
 
                     assertThat(hits.getAt(0).getSourceAsMap().size(), equalTo(5));
@@ -444,7 +450,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(10L));
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(3));
 
                     assertThat(hits.getAt(0).getSourceAsMap().size(), equalTo(5));
@@ -458,7 +464,7 @@ public class TopHitsIT extends ESIntegTestCase {
         assertNoFailuresAndResponse(
             prepareSearch("idx").setQuery(matchAllQuery()).addAggregation(global("global").subAggregation(topHits("hits"))),
             response -> {
-                Global global = response.getAggregations().get("global");
+                SingleBucketAggregation global = response.getAggregations().get("global");
                 assertThat(global, notNullValue());
                 assertThat(global.getName(), equalTo("global"));
                 assertThat(global.getAggregations(), notNullValue());
@@ -501,7 +507,7 @@ public class TopHitsIT extends ESIntegTestCase {
                         assertThat(bucket.getDocCount(), equalTo(10L));
                         TopHits topHits = bucket.getAggregations().get("hits");
                         SearchHits hits = topHits.getHits();
-                        assertThat(hits.getTotalHits().value, equalTo(controlHits.getTotalHits().value));
+                        assertThat(hits.getTotalHits().value(), equalTo(controlHits.getTotalHits().value()));
                         assertThat(hits.getHits().length, equalTo(controlHits.getHits().length));
                         for (int i = 0; i < hits.getHits().length; i++) {
                             logger.info(
@@ -543,7 +549,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(10L));
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(3));
                     assertThat(hits.getAt(0).getSortValues()[0], equalTo(higestSortValue));
                     assertThat(hits.getAt(1).getSortValues()[0], equalTo(higestSortValue - 1));
@@ -578,7 +584,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(key(bucket), equalTo("b"));
                 TopHits topHits = bucket.getAggregations().get("hits");
                 SearchHits hits = topHits.getHits();
-                assertThat(hits.getTotalHits().value, equalTo(4L));
+                assertThat(hits.getTotalHits().value(), equalTo(4L));
                 assertThat(hits.getHits().length, equalTo(1));
                 assertThat(hits.getAt(0).getId(), equalTo("6"));
 
@@ -586,7 +592,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(key(bucket), equalTo("c"));
                 topHits = bucket.getAggregations().get("hits");
                 hits = topHits.getHits();
-                assertThat(hits.getTotalHits().value, equalTo(3L));
+                assertThat(hits.getTotalHits().value(), equalTo(3L));
                 assertThat(hits.getHits().length, equalTo(1));
                 assertThat(hits.getAt(0).getId(), equalTo("9"));
 
@@ -594,7 +600,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(key(bucket), equalTo("a"));
                 topHits = bucket.getAggregations().get("hits");
                 hits = topHits.getHits();
-                assertThat(hits.getTotalHits().value, equalTo(2L));
+                assertThat(hits.getTotalHits().value(), equalTo(2L));
                 assertThat(hits.getHits().length, equalTo(1));
                 assertThat(hits.getAt(0).getId(), equalTo("2"));
             }
@@ -630,7 +636,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 for (Terms.Bucket bucket : terms.getBuckets()) {
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(1));
 
                     SearchHit hit = hits.getAt(0);
@@ -655,8 +661,9 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(hit.field("field2").getValue(), equalTo(2.71f));
                     assertThat(hit.field("script").getValue().toString(), equalTo("5"));
 
-                    assertThat(hit.getSourceAsMap().size(), equalTo(1));
-                    assertThat(hit.getSourceAsMap().get("text").toString(), equalTo("some text to entertain"));
+                    Map<String, Object> source = hit.getSourceAsMap();
+                    assertThat(source.size(), equalTo(1));
+                    assertThat(source.get("text").toString(), equalTo("some text to entertain"));
                     assertEquals("some text to entertain", hit.getFields().get("text").getValue());
                     assertEquals("some text to entertain", hit.getFields().get("text_stored_lookup").getValue());
                 }
@@ -682,7 +689,7 @@ public class TopHitsIT extends ESIntegTestCase {
             TopHits hits = response.getAggregations().get("hits");
             assertThat(hits, notNullValue());
             assertThat(hits.getName(), equalTo("hits"));
-            assertThat(hits.getHits().getTotalHits().value, equalTo(0L));
+            assertThat(hits.getHits().getTotalHits().value(), equalTo(0L));
         });
     }
 
@@ -736,7 +743,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     )
                 ),
             response -> {
-                Nested nested = response.getAggregations().get("to-comments");
+                SingleBucketAggregation nested = response.getAggregations().get("to-comments");
                 assertThat(nested.getDocCount(), equalTo(4L));
 
                 Terms terms = nested.getAggregations().get("users");
@@ -744,7 +751,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(bucket.getDocCount(), equalTo(1L));
                 TopHits topHits = bucket.getAggregations().get("top-comments");
                 SearchHits searchHits = topHits.getHits();
-                assertThat(searchHits.getTotalHits().value, equalTo(1L));
+                assertThat(searchHits.getTotalHits().value(), equalTo(1L));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getField().string(), equalTo("comments"));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getOffset(), equalTo(0));
                 assertThat(extractValue("date", searchHits.getAt(0).getSourceAsMap()), equalTo(1));
@@ -753,7 +760,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(bucket.getDocCount(), equalTo(2L));
                 topHits = bucket.getAggregations().get("top-comments");
                 searchHits = topHits.getHits();
-                assertThat(searchHits.getTotalHits().value, equalTo(2L));
+                assertThat(searchHits.getTotalHits().value(), equalTo(2L));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getField().string(), equalTo("comments"));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getOffset(), equalTo(1));
                 assertThat(extractValue("date", searchHits.getAt(0).getSourceAsMap()), equalTo(2));
@@ -765,7 +772,7 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(bucket.getDocCount(), equalTo(1L));
                 topHits = bucket.getAggregations().get("top-comments");
                 searchHits = topHits.getHits();
-                assertThat(searchHits.getTotalHits().value, equalTo(1L));
+                assertThat(searchHits.getTotalHits().value(), equalTo(1L));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getField().string(), equalTo("comments"));
                 assertThat(searchHits.getAt(0).getNestedIdentity().getOffset(), equalTo(1));
                 assertThat(extractValue("date", searchHits.getAt(0).getSourceAsMap()), equalTo(4));
@@ -785,11 +792,11 @@ public class TopHitsIT extends ESIntegTestCase {
                     ).subAggregation(topHits("top-comments").sort("comments.date", SortOrder.DESC).size(4))
                 ),
             response -> {
-                Nested toComments = response.getAggregations().get("to-comments");
+                SingleBucketAggregation toComments = response.getAggregations().get("to-comments");
                 assertThat(toComments.getDocCount(), equalTo(4L));
 
                 TopHits topComments = toComments.getAggregations().get("top-comments");
-                assertThat(topComments.getHits().getTotalHits().value, equalTo(4L));
+                assertThat(topComments.getHits().getTotalHits().value(), equalTo(4L));
                 assertThat(topComments.getHits().getHits().length, equalTo(4));
 
                 assertThat(topComments.getHits().getAt(0).getId(), equalTo("2"));
@@ -812,11 +819,11 @@ public class TopHitsIT extends ESIntegTestCase {
                 assertThat(topComments.getHits().getAt(3).getNestedIdentity().getOffset(), equalTo(0));
                 assertThat(topComments.getHits().getAt(3).getNestedIdentity().getChild(), nullValue());
 
-                Nested toReviewers = toComments.getAggregations().get("to-reviewers");
+                SingleBucketAggregation toReviewers = toComments.getAggregations().get("to-reviewers");
                 assertThat(toReviewers.getDocCount(), equalTo(7L));
 
                 TopHits topReviewers = toReviewers.getAggregations().get("top-reviewers");
-                assertThat(topReviewers.getHits().getTotalHits().value, equalTo(7L));
+                assertThat(topReviewers.getHits().getTotalHits().value(), equalTo(7L));
                 assertThat(topReviewers.getHits().getHits().length, equalTo(7));
 
                 assertThat(topReviewers.getHits().getAt(0).getId(), equalTo("1"));
@@ -895,11 +902,11 @@ public class TopHitsIT extends ESIntegTestCase {
                 ),
             response -> {
                 assertHitCount(response, 2);
-                Nested nested = response.getAggregations().get("to-comments");
+                SingleBucketAggregation nested = response.getAggregations().get("to-comments");
                 assertThat(nested.getDocCount(), equalTo(4L));
 
                 SearchHits hits = ((TopHits) nested.getAggregations().get("top-comments")).getHits();
-                assertThat(hits.getTotalHits().value, equalTo(4L));
+                assertThat(hits.getTotalHits().value(), equalTo(4L));
                 SearchHit searchHit = hits.getAt(0);
                 assertThat(searchHit.getId(), equalTo("1"));
                 assertThat(searchHit.getNestedIdentity().getField().string(), equalTo("comments"));
@@ -927,8 +934,9 @@ public class TopHitsIT extends ESIntegTestCase {
                 field = searchHit.field("script");
                 assertThat(field.getValue().toString(), equalTo("5"));
 
-                assertThat(searchHit.getSourceAsMap().size(), equalTo(1));
-                assertThat(extractValue("message", searchHit.getSourceAsMap()), equalTo("some comment"));
+                Map<String, Object> source = searchHit.getSourceAsMap();
+                assertThat(source.size(), equalTo(1));
+                assertThat(extractValue("message", source), equalTo("some comment"));
             }
         );
     }
@@ -955,12 +963,12 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(5L));
 
                     long numNestedDocs = 10 + (5 * i);
-                    Nested nested = bucket.getAggregations().get("to-comments");
+                    SingleBucketAggregation nested = bucket.getAggregations().get("to-comments");
                     assertThat(nested.getDocCount(), equalTo(numNestedDocs));
 
                     TopHits hits = nested.getAggregations().get("comments");
                     SearchHits searchHits = hits.getHits();
-                    assertThat(searchHits.getTotalHits().value, equalTo(numNestedDocs));
+                    assertThat(searchHits.getTotalHits().value(), equalTo(numNestedDocs));
                     for (int j = 0; j < 3; j++) {
                         assertThat(searchHits.getAt(j).getNestedIdentity().getField().string(), equalTo("comments"));
                         assertThat(searchHits.getAt(j).getNestedIdentity().getOffset(), equalTo(0));
@@ -1064,7 +1072,7 @@ public class TopHitsIT extends ESIntegTestCase {
                     assertThat(bucket.getDocCount(), equalTo(10L));
                     TopHits topHits = bucket.getAggregations().get("hits");
                     SearchHits hits = topHits.getHits();
-                    assertThat(hits.getTotalHits().value, equalTo(10L));
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
                     assertThat(hits.getHits().length, equalTo(3));
                     for (SearchHit hit : hits) {
                         assertThat(hit.getSourceAsMap(), nullValue());
@@ -1266,6 +1274,41 @@ public class TopHitsIT extends ESIntegTestCase {
         );
     }
 
+    public void testScriptSorting() {
+        Script script = new Script(ScriptType.INLINE, NAME, "doc['sort'].value", Collections.emptyMap());
+        assertNoFailuresAndResponse(
+            prepareSearch("idx").addAggregation(
+                terms("terms").executionHint(randomExecutionHint())
+                    .field(TERMS_AGGS_FIELD)
+                    .subAggregation(topHits("hits").sort(SortBuilders.scriptSort(script, ScriptSortType.NUMBER).order(SortOrder.DESC)))
+            ),
+            response -> {
+                Terms terms = response.getAggregations().get("terms");
+                assertThat(terms, notNullValue());
+                assertThat(terms.getName(), equalTo("terms"));
+                assertThat(terms.getBuckets().size(), equalTo(5));
+
+                double higestSortValue = 0;
+                for (int i = 0; i < 5; i++) {
+                    Terms.Bucket bucket = terms.getBucketByKey("val" + i);
+                    assertThat(bucket, notNullValue());
+                    assertThat(key(bucket), equalTo("val" + i));
+                    assertThat(bucket.getDocCount(), equalTo(10L));
+                    TopHits topHits = bucket.getAggregations().get("hits");
+                    SearchHits hits = topHits.getHits();
+                    assertThat(hits.getTotalHits().value(), equalTo(10L));
+                    assertThat(hits.getHits().length, equalTo(3));
+                    higestSortValue += 10;
+                    assertThat((Double) hits.getAt(0).getSortValues()[0], equalTo(higestSortValue));
+                    assertThat((Double) hits.getAt(1).getSortValues()[0], equalTo(higestSortValue - 1));
+                    assertThat((Double) hits.getAt(2).getSortValues()[0], equalTo(higestSortValue - 2));
+
+                    assertThat(hits.getAt(0).getSourceAsMap().size(), equalTo(5));
+                }
+            }
+        );
+    }
+
     public static class FetchPlugin extends Plugin implements SearchPlugin {
         @Override
         public List<FetchSubPhase> getFetchSubPhases(FetchPhaseConstructionContext context) {
@@ -1284,8 +1327,7 @@ public class TopHitsIT extends ESIntegTestCase {
                         public void process(FetchSubPhase.HitContext hitContext) {
                             leafSearchLookup.setDocument(hitContext.docId());
                             FieldLookup fieldLookup = leafSearchLookup.fields().get("text");
-                            hitContext.hit()
-                                .setDocumentField("text_stored_lookup", new DocumentField("text_stored_lookup", fieldLookup.getValues()));
+                            hitContext.hit().setDocumentField(new DocumentField("text_stored_lookup", fieldLookup.getValues()));
                         }
 
                         @Override
